sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:11: error: ')' expected but '}' found.
      if (j!=1 {j -= 1}  }
                         ^AlgInsertionSort:18: error: Unmatched closing brace '}' ignored here
}
^